tests/invalid_expr_for.c.t.exp
  File "invalid_expr_for.c.py", line 23
    for i in  #$!
                ^
SyntaxError: invalid syntax
